--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -435,6 +435,7 @@ h5 {
 .parallax-search.home-1 {
   position: relative;
   background: url("../../public/assets/images/bg/bg-main-home.jpg") no-repeat center top;
+  background: url("../images/bg/bg-main-home.jpg") no-repeat center top;
   background-size: cover;
   background-attachment: fixed !important;
   width: 100%;
